--- a/TaxingArchitecture/Tax.ApplicationService/Tax.ApplicationService.csproj
+++ b/TaxingArchitecture/Tax.ApplicationService/Tax.ApplicationService.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Tax.CrossCutting\Tax.CrossCutting.csproj" />
     <ProjectReference Include="..\Tax.DependenceInjection\Tax.DependenceInjection.csproj" />
   </ItemGroup>
 
