Adicionado a userInterface ao projeto e atualizado o git ignore do projeto

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,90 @@
 /TaxingArchitecture/Tax.ApplicationService/Tax.ApplicationService.csproj.user
 /TaxingArchitecture/Tax.CrossCutting/obj/Debug/netcoreapp2.0
 /TaxingArchitecture/Tax.CrossCutting/obj
+
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+
+
+# compiled output
+
+/dist
+
+/dist-server
+
+/tmp
+
+/out-tsc
+
+
+
+# dependencies
+
+/node_modules
+
+
+
+# IDEs and editors
+
+/.idea
+
+.project
+
+.classpath
+
+.c9/
+
+*.launch
+
+.settings/
+
+*.sublime-workspace
+
+
+
+# IDE - VSCode
+
+.vscode/*
+
+!.vscode/settings.json
+
+!.vscode/tasks.json
+
+!.vscode/launch.json
+
+!.vscode/extensions.json
+
+
+# misc
+
+/.sass-cache
+
+/connect.lock
+
+/coverage
+
+/libpeerconnection.log
+
+npm-debug.log
+
+yarn-error.log
+
+testem.log
+
+/typings
+
+
+
+# e2e
+
+/e2e/*.js
+
+/e2e/*.map
+
+
+
+# System Files
+
+.DS_Store
+
+Thumbs.db
+/TaxingArchitecture/Tax.UserInterface/node_modules
