--- a/TaxingArchitecture/Tax.ViewModels/Tax.ViewModels.csproj
+++ b/TaxingArchitecture/Tax.ViewModels/Tax.ViewModels.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="EmployeeViewModel.cs.d.ts">
+      <DependentUpon>EmployeeViewModel.cs</DependentUpon>
+    </None>
+  </ItemGroup>
+
 </Project>
