Criado controller para acesso a consulta de dados do funcionario e implementada chamada para esta API

--- a/TaxingArchitecture/Tax.ApplicationService/Tax.ApplicationService.csproj
+++ b/TaxingArchitecture/Tax.ApplicationService/Tax.ApplicationService.csproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Tax.CrossCutting\Tax.CrossCutting.csproj" />
     <ProjectReference Include="..\Tax.DependenceInjection\Tax.DependenceInjection.csproj" />
+    <ProjectReference Include="..\Tax.ViewModels\Tax.ViewModels.csproj" />
   </ItemGroup>
 
 </Project>
