--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,6 @@ testem.log
 
 Thumbs.db
 /TaxingArchitecture/Tax.UserInterface/node_modules
+/TaxingArchitecture/Tax.ApplicationService/bin/Debug/netcoreapp2.0
+/TaxingArchitecture/Tax.CrossCutting/bin/Debug/netcoreapp2.0
+/TaxingArchitecture/Tax.ViewModels/bin/Debug/netcoreapp2.0
