--- a/TaxingArchitecture/Tax.DependenceInjection/Tax.DependenceInjection.csproj
+++ b/TaxingArchitecture/Tax.DependenceInjection/Tax.DependenceInjection.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Tax.BusinessLogic\Tax.BusinessLogic.csproj" />
+  </ItemGroup>
+
 </Project>
