--- a/TaxingArchitecture/Tax.UserInterface/package.json
+++ b/TaxingArchitecture/Tax.UserInterface/package.json
@@ -20,15 +20,17 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19",
+    "@types/cleave.js": "^1.1.2",
     "admin-lte": "2.3.11",
+    "cleave.js": "^1.3.3",
+    "core-js": "^2.4.1",
     "font-awesome": "4.7.0",
     "intl": "1.2.5",
     "jquery": "3.1.1",
     "reflect-metadata": "0.1.9",
-    "ts-helpers": "1.1.2"
+    "rxjs": "^5.5.6",
+    "ts-helpers": "1.1.2",
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
     "@angular/cli": "~1.7.2",
