--- a/TaxingArchitecture/Tax.UserInterface/package.json
+++ b/TaxingArchitecture/Tax.UserInterface/package.json
@@ -27,6 +27,7 @@
     "font-awesome": "4.7.0",
     "intl": "1.2.5",
     "jquery": "3.1.1",
+    "ng2-currency-mask": "^5.3.1",
     "reflect-metadata": "0.1.9",
     "rxjs": "^5.5.6",
     "ts-helpers": "1.1.2",
