--- a/TaxingArchitecture/Tax.UserInterface/package.json
+++ b/TaxingArchitecture/Tax.UserInterface/package.json
@@ -25,7 +25,7 @@
     "cleave.js": "^1.3.3",
     "core-js": "^2.4.1",
     "font-awesome": "4.7.0",
-    "intl": "1.2.5",
+    "intl": "^1.2.5",
     "jquery": "3.1.1",
     "ng2-currency-mask": "^5.3.1",
     "reflect-metadata": "0.1.9",
